test/Fail/Issue1499.err
Issue1499.agda:7.1-9: error: [Syntax.AmbiguousFunClauses]
More than one matching type signature for left hand side ldom R a
it could belong to any of:
ldom (at Issue1499.agda:6.1-5)
R (at Issue1499.agda:4.1-2)
